# AutoNode

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
autonode/: .env.example  Dockerfile  alembic.ini  app.py  entrypoint.sh  pyproject.toml  worker.py
autonode/agents/: base_agent.py  planning_agent.py  traversal_agent.py  typing_agent.py
autonode/alembic/: env.py
autonode/alembic/versions/: 22bd93a20597_create_requests_table.py  6f5f151a425f_create_actions_table.py  9249a4e23a07_create_files_table.py
autonode/clients/: http_client.py  ocr.py  yolo.py
autonode/config/: config.py  settings.py  uvicorn_logger_config.json
autonode/config/kafka/: kafka_config_development.json  kafka_config_loader.py  kafka_config_prod.json
autonode/controllers/: autonode.py
autonode/factories/: node_factory.py
autonode/llms/: base_llm.py  open_ai.py
autonode/logger/: logger.py
autonode/models/: actions.py  base_model.py  files.py  requests.py
autonode/nodes/: __init__.py  base_node.py  click_and_type.py  download.py  navigation.py  planning.py
autonode/prompts/: openai_prompt.py
autonode/services/: autonode.py  bounding_box.py  graph.py  ocr.py  web_automation.py
autonode/site_trees/: apollo.json  gmail.json  twitter.json
autonode/utils/: screenshot_generator.py
autonode/utils/decorators/: retry_decorator.py
autonode/utils/enums/: request_status.py
autonode/utils/exceptions/: element_not_found_exception.py  llm_objective_exception.py
autonode/utils/helpers/: bounding_box_helper.py  cleanup_helper.py  image_helper.py  naming_helper.py  prompt_helper.py  s3_helper.py  string_helper.py  web_automation_helper.py
ocr/: Dockerfile  README.md  app.py  download_models.py  entrypoint.sh  newrelic.ini  pyproject.toml
ocr/ocr/: .env.example
ocr/ocr/configs/: settings.py
ocr/ocr/controllers/: image_controller.py
ocr/ocr/services/: easy_ocr.py  ocr_service.py
ocr/ocr/utils/: box_utils.py
yolo/: Dockerfile  README.md  app.py  newrelic.ini  pyproject.toml
yolo/yolo/: .env.example
yolo/yolo/configs/: settings.py
yolo/yolo/controllers/: image_controller.py
yolo/yolo/enums/: model_type.py
(+4 files in other folders)
