[tool.poetry]
name = "autonode"
version = "1.0.0"
description = ""
authors = ["Manandeep Singh <manandeep@contlo.com>"]

[tool.poetry.dependencies]
python = "^3.11.9"
newrelic = "^9.9.0"
fastapi = "^0.110.0"
requests = "^2.31.0"
fastapi-cli = "^0.0.2"
python-multipart = "^0.0.9"
asgi-correlation-id = "4.3.0"
SQLAlchemy = "2.0.23"
FastAPI-SQLAlchemy = "0.2.1"
celery = "5.3.6"
six = "1.16.0"
redis = "4.5.5"
pydantic = "1.10.13"
psycopg2-binary = "2.9.7"
playwright = "1.41.2"
easyocr = "1.7.1"
uvicorn = "0.29.0"
tiktoken = "^0.7.0"

openai = "^1.30.2"
jellyfish = "^1.0.3"
boto3 = "^1.34.112"
alembic = "^1.13.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run_script = "autonode:app"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-mock = "*"