[tool.poetry]
name = "ocr"
version = "0.1.0"
description = ""
authors = ["Madhur Bansal <madhur@contlo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
newrelic = "^9.9.0"
fastapi = "^0.111.0"
easyocr = "^1.7.1"
requests = "^2.31.0"
fastapi-cli = "^0.0.2"
python-multipart = "^0.0.9"


gunicorn = "^22.0.0"
asgi-correlation-id = "^4.3.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run_script = "ocr:app"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-mock = "*"