[tool.poetry]
name = "yolo"
version = "0.1.0"
description = ""
authors = ["Madhur Bansal <madhur@contlo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
newrelic = "^9.9.0"
fastapi = "^0.111.0"
requests = "^2.31.0"
ultralytics = "^8.2.7"
fastapi-cli = "^0.0.2"
python-multipart = "^0.0.9"
sahi = "^0.11.16"

gunicorn = "^22.0.0"
asgi-correlation-id = "^4.3.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run_script = "ocr:app"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-mock = "*"